add hashcode, equal and test to biocnode

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
   <artifactId>biolemmatizer-core</artifactId>
   <version>1.2</version>
 </dependency>
+
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.3.2</version>
+	</dependency>
   </dependencies>
   <repositories>
     <repository>
