--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,16 @@
 		<artifactId>commons-lang3</artifactId>
 		<version>3.3.2</version>
 	</dependency>
+	<dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+		<version>17.0</version>
+	</dependency>
+	<dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava-testlib</artifactId>
+		<version>17.0</version>
+	</dependency>
   </dependencies>
   <repositories>
     <repository>
