--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
 		<artifactId>guava-testlib</artifactId>
 		<version>17.0</version>
 	</dependency>
+	<dependency>
+		<groupId>org.xmlmatchers</groupId>
+		<artifactId>xml-matchers</artifactId>
+		<version>1.0-RC1</version>
+	</dependency>
   </dependencies>
   <repositories>
     <repository>
