--- a/pom.xml
+++ b/pom.xml
@@ -47,26 +47,10 @@
     	<version>1.5</version>
     </dependency>
 	<dependency>
-		<groupId>org.codehaus.woodstox</groupId>
-		<artifactId>wstx-asl</artifactId>
-		<version>4.0.6</version>
-	</dependency>
-	<dependency>
-		<groupId>stax-utils</groupId>
-		<artifactId>stax-utils</artifactId>
-		<version>snapshot-20040917</version>
-	</dependency>
-	<dependency>
 		<groupId>org.hamcrest</groupId>
 		<artifactId>hamcrest-core</artifactId>
 		<version>1.3</version>
 	</dependency>
-	<dependency>
-  <groupId>edu.ucdenver.ccp</groupId>
-  <artifactId>biolemmatizer-core</artifactId>
-  <version>1.2</version>
-</dependency>
-
 	<dependency>
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-lang3</artifactId>
@@ -87,7 +71,27 @@
 		<artifactId>xml-matchers</artifactId>
 		<version>1.0-RC1</version>
 	</dependency>
-  </dependencies>
+	<dependency>
+		<groupId>stax-utils</groupId>
+		<artifactId>stax-utils</artifactId>
+		<version>snapshot-20040917</version>
+	</dependency>
+<dependency>
+    <groupId>xml-apis</groupId>
+    <artifactId>xml-apis</artifactId>
+    <version>1.4.01</version>
+</dependency>
+<dependency>
+	<groupId>org.codehaus.woodstox</groupId>
+	<artifactId>woodstox-core-asl</artifactId>
+	<version>4.4.0</version>
+</dependency>
+<dependency>
+	<groupId>args4j</groupId>
+	<artifactId>args4j</artifactId>
+	<version>2.0.29</version>
+</dependency>
+</dependencies>
   <repositories>
     <repository>
   <id>bionlp-sourceforge</id>
