--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>bioc</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <scriptSourceDirectory>src/main/scripts</scriptSourceDirectory>
@@ -39,63 +43,65 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
+<!--
       <scope>test</scope>
+-->
     </dependency>
     <dependency>
-    	<groupId>xmlunit</groupId>
-    	<artifactId>xmlunit</artifactId>
-    	<version>1.5</version>
+      <groupId>xmlunit</groupId>
+      <artifactId>xmlunit</artifactId>
+      <version>1.5</version>
     </dependency>
-	<dependency>
-		<groupId>org.hamcrest</groupId>
-		<artifactId>hamcrest-core</artifactId>
-		<version>1.3</version>
-	</dependency>
-	<dependency>
-		<groupId>org.apache.commons</groupId>
-		<artifactId>commons-lang3</artifactId>
-		<version>3.3.2</version>
-	</dependency>
-	<dependency>
-		<groupId>com.google.guava</groupId>
-		<artifactId>guava</artifactId>
-		<version>17.0</version>
-	</dependency>
-	<dependency>
-		<groupId>com.google.guava</groupId>
-		<artifactId>guava-testlib</artifactId>
-		<version>17.0</version>
-	</dependency>
-	<dependency>
-		<groupId>org.xmlmatchers</groupId>
-		<artifactId>xml-matchers</artifactId>
-		<version>1.0-RC1</version>
-	</dependency>
-	<dependency>
-		<groupId>stax-utils</groupId>
-		<artifactId>stax-utils</artifactId>
-		<version>snapshot-20040917</version>
-	</dependency>
-<dependency>
-    <groupId>xml-apis</groupId>
-    <artifactId>xml-apis</artifactId>
-    <version>1.4.01</version>
-</dependency>
-<dependency>
-	<groupId>org.codehaus.woodstox</groupId>
-	<artifactId>woodstox-core-asl</artifactId>
-	<version>4.4.0</version>
-</dependency>
-<dependency>
-	<groupId>args4j</groupId>
-	<artifactId>args4j</artifactId>
-	<version>2.0.29</version>
-</dependency>
-</dependencies>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>17.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava-testlib</artifactId>
+      <version>17.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.xmlmatchers</groupId>
+      <artifactId>xml-matchers</artifactId>
+      <version>1.0-RC1</version>
+    </dependency>
+    <dependency>
+      <groupId>stax-utils</groupId>
+      <artifactId>stax-utils</artifactId>
+      <version>snapshot-20040917</version>
+    </dependency>
+    <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>1.4.01</version>
+    </dependency>
+    <dependency>
+	  <groupId>org.codehaus.woodstox</groupId>
+	  <artifactId>woodstox-core-asl</artifactId>
+	  <version>4.4.0</version>
+    </dependency>
+    <dependency>
+	  <groupId>args4j</groupId>
+	  <artifactId>args4j</artifactId>
+	  <version>2.0.29</version>
+    </dependency>
+  </dependencies>
   <repositories>
     <repository>
-  <id>bionlp-sourceforge</id>
-  <url>http://svn.code.sf.net/p/bionlp/code/repo</url>
-</repository>
+      <id>bionlp-sourceforge</id>
+      <url>http://svn.code.sf.net/p/bionlp/code/repo</url>
+    </repository>
   </repositories>
 </project>
