--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,47 @@
   <groupId>org.biocreative.bioc</groupId>
   <artifactId>bioc</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>bioc</name>
-  <url>http://maven.apache.org</url>
+  <version>2.0-SNAPSHOT</version>
+  <name>bioc-core</name>
+  <url>http://bioc.sourceforge.net/</url>
+  <description>The bioc main core project.</description>
+  <licenses>
+    <license>
+      <name>United States Government Work</name>
+      <url>http://www.copyright.gov/title17/</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <url>http://svn.code.sf.net/p/bionlp/code/repo</url>
+    <connection>http://svn.code.sf.net/p/bionlp/code/repo</connection>
+  </scm>
+  <developers>
+    <developer>
+      <name>Don Comeau</name>
+      <email>comeau@ncbi.nlm.nih.gov</email>
+    </developer>
+    <developer>
+      <name>Rezarta Islamaj Dogan</name>
+      <email>islamaj@ncbi.nlm.nih.gov</email>
+    </developer>
+    <developer>
+      <name>Haibin Liu</name>
+      <email>liuh11@ncbi.nlm.nih.gov</email>
+    </developer>
+    <developer>
+      <name>Yifan Peng</name>
+      <email>yfpeng@udel.edu</email>
+    </developer>
+    <developer>
+      <name>Thomas C. Wiegers</name>
+      <email>twiegers@mdibl.org</email>
+    </developer>
+    <developer>
+      <name>John Wilbur</name>
+      <email>wilbur@ncbi.nlm.nih.gov</email>
+    </developer>
+  </developers>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -43,9 +81,6 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
-<!--
-      <scope>test</scope>
--->
     </dependency>
     <dependency>
       <groupId>xmlunit</groupId>
@@ -98,10 +133,4 @@
 	  <version>2.0.29</version>
     </dependency>
   </dependencies>
-  <repositories>
-    <repository>
-      <id>bionlp-sourceforge</id>
-      <url>http://svn.code.sf.net/p/bionlp/code/repo</url>
-    </repository>
-  </repositories>
 </project>
