--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.biocreative.bioc</groupId>
+  <groupId>com.pengyifan.bioc</groupId>
   <artifactId>bioc-core</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>bioc-core</name>
+  <name>${project.groupId}:${project.artifactId}</name>
   <description>The bioc main core project.</description>
   <licenses>
     <license>
-      <name>Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+      <name>The BSD 3-Clause License</name>
+      <url>http://opensource.org/licenses/BSD-3-Clause</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
   <scm>
-    <url>https://github.com/yfpeng/bioc-core</url>
-    <connection>https://github.com/yfpeng/bioc-core</connection>
+    <url>git@github.com:yfpeng/bioc-core.git</url>
+    <connection>scm:git:git@github.com:yfpeng/bioc-core.git</connection>
+    <developerConnection>scm:git:git@github.com:yfpeng/bioc-core.git</developerConnection>
   </scm>
   <developers>
     <developer>
       <name>Yifan Peng</name>
       <email>yfpeng@udel.edu</email>
+      <organization>University of Delaware</organization>
+      <organizationUrl>http://www.ude.edu</organizationUrl>
     </developer>
   </developers>
   <properties>
