--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>0.1.0-SNAPSHOT</version>
   <name>${project.groupId}:${project.artifactId}</name>
   <description>The bioc main core project.</description>
-  <url>https://github.com/yfpeng/bioc-core</url>
+  <url>https://github.com/yfpeng/pengyifan-bioc</url>
   <licenses>
     <license>
       <name>The BSD 3-Clause License</name>
@@ -16,9 +16,9 @@
     </license>
   </licenses>
   <scm>
-    <url>git@github.com:yfpeng/bioc-core.git</url>
-    <connection>scm:git:git@github.com:yfpeng/bioc-core.git</connection>
-    <developerConnection>scm:git:git@github.com:yfpeng/bioc-core.git</developerConnection>
+    <url>git@github.com:yfpeng/pengyifan-bioc.git</url>
+    <connection>scm:git:git@github.com:yfpeng/pengyifan-bioc.git</connection>
+    <developerConnection>scm:git:git@github.com:yfpeng/pengyifan-bioc.git</developerConnection>
   </scm>
   <developers>
     <developer>
