--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
       <artifactId>xml-apis</artifactId>
       <version>1.4.01</version>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.woodstox</groupId>
+      <artifactId>woodstox-core-asl</artifactId>
+      <version>RELEASE</version>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <snapshotRepository>
