--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
       <artifactId>woodstox-core-asl</artifactId>
       <version>RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-rules</artifactId>
+      <version>RELEASE</version>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <snapshotRepository>
