add intellij ignoring files

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,20 @@ doc/*
 *~
 \#*
 .\#*
-target
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
