returns min span of the annotation

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,26 @@ doc/*
 *~
 \#*
 .\#*
-target
+/logs
+/config
+/resources
+
+# Python
+*.pyc
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
