--- a/pom.xml
+++ b/pom.xml
@@ -101,37 +101,37 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>RELEASE</version>
+      <version>4.12</version>
     </dependency>
     <dependency>
       <groupId>xmlunit</groupId>
       <artifactId>xmlunit</artifactId>
-      <version>RELEASE</version>
+      <version>1.6</version>
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-all</artifactId>
-      <version>RELEASE</version>
+      <version>1.3</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>RELEASE</version>
+      <version>3.4</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>RELEASE</version>
+      <version>18.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava-testlib</artifactId>
-      <version>RELEASE</version>
+      <version>18.0</version>
     </dependency>
     <dependency>
       <groupId>args4j</groupId>
       <artifactId>args4j</artifactId>
-      <version>RELEASE</version>
+      <version>2.32</version>
     </dependency>
     <dependency>
       <groupId>net.java.dev.stax-utils</groupId>
@@ -151,12 +151,12 @@
     <dependency>
       <groupId>org.codehaus.woodstox</groupId>
       <artifactId>woodstox-core-asl</artifactId>
-      <version>RELEASE</version>
+      <version>4.4.1</version>
     </dependency>
     <dependency>
       <groupId>com.github.stefanbirkner</groupId>
       <artifactId>system-rules</artifactId>
-      <version>RELEASE</version>
+      <version>1.11.0</version>
     </dependency>
   </dependencies>
   <distributionManagement>
