typos in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
       <name>Yifan Peng</name>
       <email>yfpeng@udel.edu</email>
       <organization>University of Delaware</organization>
-      <organizationUrl>http://www.ude.edu</organizationUrl>
+      <organizationUrl>http://www.udel.edu</organizationUrl>
     </developer>
   </developers>
   <properties>
