--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
       <artifactId>system-rules</artifactId>
       <version>1.11.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava-testlib</artifactId>
+      <version>18.0</version>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <snapshotRepository>
