--- a/pom.xml
+++ b/pom.xml
@@ -154,9 +154,9 @@
       <version>1.11.0</version>
     </dependency>
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava-testlib</artifactId>
-      <version>18.0</version>
+      <groupId>org.javatuples</groupId>
+      <artifactId>javatuples</artifactId>
+      <version>1.2</version>
     </dependency>
   </dependencies>
   <distributionManagement>
