--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,17 @@
       <artifactId>javatuples</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>net.java.dev.stax-utils</groupId>
+      <artifactId>stax-utils</artifactId>
+      <version>20070216</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.bea.xml</groupId>
+          <artifactId>jsr173-ri</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <snapshotRepository>
